create github pages

--- a/evritosvillas.comgr.html
+++ b/evritosvillas.comgr.html
@@ -20,8 +20,8 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/web/assets/gdpr-plugin/gdpr-styles.css">
   <link rel="stylesheet" href="assets/animatecss/animate.min.css">
-  <link rel="stylesheet" href="assets/popup-overlay-plugin/style.css">
   <link rel="stylesheet" href="assets/smart-cart/minicart-theme.css">
+  <link rel="stylesheet" href="assets/popup-overlay-plugin/style.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/gallery/style.css">
@@ -34,7 +34,6 @@
   
   
   
-
 <meta name="theme-color" content="#c19b76">
 <link rel="manifest" href="manifest.json">
 <script src="sw-connect.js"></script>
@@ -48,7 +47,8 @@
 <link rel="apple-touch-startup-image" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="assets/images/apple-launch-2048x2732.png">
 <meta name="apple-mobile-web-app-status-bar-style" content="default">
 <meta name="apple-mobile-web-app-title" content="">
-<link rel="apple-touch-icon" href="apple-touch-icon.png"></head>
+<link rel="apple-touch-icon" href="apple-touch-icon.png">
+</head>
 <body>
   
   <section class="menu4 menu cid-rzMj9prxNq" once="menu" id="menu4-1">
@@ -459,7 +459,10 @@
     </div>          
 </section>
 
-<div id="custom-html-l"><script defer async src='https://cdn.trustindex.io/loader.js?99b8c72228695783e626cbbe2a9'></script></div>
+<div id="custom-html-l"><a class="weatherwidget-io" href="https://forecast7.com/el/38d9121d79/karpenissi/" data-label_1="KARPENISI" data-label_2="WEATHER" data-theme="original">KARPENISI WEATHER</a>
+<script>
+!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
+</script></div>
 
 <section class="maps4 cid-rzMkAdN98w mbr-parallax-background" id="maps4-9">
 
@@ -474,11 +477,11 @@
         <div class="row main-row justify-content-center pt-5">
             <div class="col-md-10 col-lg-6 form-wrapper">            
                 
-                <h2 class="mbr-section-title form-title mbr-fonts-style pb-3 display-5">Κρατήστε επαφή με τις Evritos Villas</h2>
+                <h2 class="mbr-section-title form-title mbr-fonts-style pb-3 display-5">Επικοινωνήστε μαζί μας!</h2>
                 <p class="mbr-text form-text mbr-fonts-style m-0 pb-4 mbr-lighter display-7">Έτοιμοι να αποδράσετε σε έναν κόσμο υψηλής πολυτέλειας; Επικοινωνήστε μαζί μας για να κάνετε κράτηση για τη διαμονή σας στις Βίλλες Evritos και ξεκινήστε ένα ταξίδι απαράμιλλης χαλάρωσης.</p>
                 <div class="form1" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="SZ5fvZuqiEpyY+K+1baS0sH9djqLUuZylFx86SWp9gx5AJygsOcyrLMYou1D+7pFrUTmub2J+OlO6kM6Lat+Q3ZrFSQxxi5McUGOPfnhSjsIujG/MtRmA20jPzmQpsKj.YXthJkIyJ2i0Zuc5q62pTJ2lJebLjrH+PYYEcbDNtH7b9knWwpcncKjPLoPjk9WLuKGvKzNePyXvUMyU4eDJfMrJbpTWd8FgI/HbqC10Qe9Z9EdEJU/iyCCDkQJct4ec">
+                    <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="5aPP1JHiremhxmli+j/EZ/iKWZUJ8L7eMNftGWhoyXbO/K8wby8kNW1bIYVgVM/vmmix7Mbm7DZhd/vZRxHP+3kp4EUs6Lx6/9iy/jLVaEVdQkba2Gjfmh4oGQxL3rxk.uaypu2Modrsum6lBbTtK3tAHfrQ0HToEs5aBuaFQFlOggu6VgyAZCLZXxhzFyTdnCb44QAxrYBPWRxbaPSil6wepgo4XUPeXprLgcdvSqEccXPtT5I/UZzh12nxfDOrD">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"></div>
